--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunny Side</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,16 +60,18 @@
                     <h2>Graphic Design</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aspernatur et ut placeat soluta ipsum vero repellat 
-                        nihil odit illum harum!
+                        Officiis, accusantium cupiditate delectus fugit impedit 
+                        blanditiis dolorum culpa doloremque earum voluptatum 
+                        suscipit sint porro vitae tempora ullam totam ad quae laudantium?
                     </p>
             </article>
             <article class="photography-box">
                 <h2>Photography</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Aspernatur et ut placeat soluta ipsum vero repellat 
-                    nihil odit illum harum!
+                    Officiis, accusantium cupiditate delectus fugit impedit 
+                    blanditiis dolorum culpa doloremque earum voluptatum 
+                    suscipit sint porro vitae tempora ullam totam ad quae laudantium?
                 </p>
             </article>
         </div>
@@ -120,10 +123,14 @@
     
     <footer data-index="3" class="footer">
         <div class="four-img-box">
-            <div class="milkbottles"></div>
-            <div class="orange"></div>
-            <div class="cone"></div>
-            <div class="sugarcubes"></div>
+            <div class="two-img-box">
+                <div class="milkbottles"></div>
+                <div class="orange"></div>
+            </div>
+            <div class="two-img-box">
+                <div class="cone"></div>
+                <div class="sugarcubes"></div>
+            </div>
         </div>
 
         <div class="bottom">
