--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <ul class="nav-links">
                 <li><a data-page="about" href="#">About</a></li>
-                <li><a data-page="services" href="#">Services</a></li>
-                <li><a data-page="projects" href="#">Projects</a></li>
-                <li><a data-page="contact" href="#">Contact</a></li>
+                <li><a data-page="services" href="#services">Services</a></li>
+                <li><a data-page="projects" href="#projects">Projects</a></li>
+                <li><a data-page="contact" href="#contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -28,7 +28,7 @@
         </header>
     </section>
 
-    <section data-index="1" class="part-2">
+    <section data-index="1" class="part-2" id="services">
         <div class="tarnsform-box">
             <div class="info">
                 <h1>Transform your brand</h1>
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section data-index="2" class="part-3">
+    <section data-index="2" class="part-3" id="projects">
         <div class="client">
             <h1>client testimonials</h1>
         </div>
@@ -121,7 +121,7 @@
         </div>
     </section>
     
-    <footer data-index="3" class="footer">
+    <footer data-index="3" class="footer" id="contact">
         <div class="four-img-box">
             <div class="two-img-box">
                 <div class="milkbottles"></div>
