--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
 
         <header class="header">
-            <h1>we are creatives</h1>
+            <h1 id="typing"></h1>
         </header>
     </section>
 
