--- a/index.html
+++ b/index.html
@@ -11,22 +11,32 @@
 </head>
 <body>
     <section data-index="0" class="part-1">
-        <nav class="nav-bar">
-            <div class="logo">
-                <img src="images/logo.svg" alt="sunny side">
-            </div>
-            <ul class="nav-links">
-                <li><a data-page="about" href="#">About</a></li>
-                <li><a data-page="services" href="#services">Services</a></li>
-                <li><a data-page="projects" href="#projects">Projects</a></li>
-                <li><a data-page="contact" href="#contact">Contact</a></li>
+        <nav class="navbar">
+            <img src="images/logo.svg" alt="logo">
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#services" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#projects" class="nav-link">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
-
-        <header class="header">
-            <h1 id="typing"></h1>
-        </header>
     </section>
+    <header class="header">
+            <h1 id="typing"></h1>
+    </header>
 
     <section data-index="1" class="part-2" id="services">
         <div class="tarnsform-box">
@@ -137,8 +147,8 @@
             <h1>sunnyside</h1>
             <ul class="navs">
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
             </ul>
         </div>
 
