--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunny Side</title>
-    <link rel="shortcut icon" href="images/title_logo.png">
+    <link rel="shortcut icon" href="https://github.com/Mu-selim/Sunnyside-landing-page/blob/main/images/title_logo.png?raw=true">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
